two screens done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#131652</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <!--<color name="colorPrimaryDark">#360036</color>-->
+    <color name="colorAccent">#FE473B</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#00BF00</color>
+    <color name="dark_green">#3D8A68</color>
+    <color name="background">#F1F1F3</color>
+    <color name="gray">#E7E7E7</color>
+    <color name="dark_gray">#9E9E9E</color>
+    <color name="transparent">#80000000</color>
+    <color name="transparent2">#90FE473B</color>
 </resources>
